# newsy-mcp

./: .gitignore  .goosehints  Makefile  PROMPT_EXAMPLE.md  README.md  TODO.md  demo-page-validation.sh  errata.sh  ingest.sh  mypy.ini  page-validation-readme.md  pyproject.toml  requirements.txt  setup.py  setup.sh
newsy-viewer/: .gitignore  README.md  index.html  news.jsonl  package-lock.json  package.json  tsconfig.json
newsy-viewer/public/: sample-data.jsonl
newsy-viewer/src/: App.tsx  styles.css  types.ts
newsy-viewer/src/components/: NewsCard.tsx  NewsCardList.tsx  NewsDetail.tsx
src/newsy_mcp/: CLAUDE.md  __init__.py  __main__.py  article_dump.py  config.py  content_util.py  crawl.py  db_init.py  direct_feed_test.py  gpt_util.py  ideator.py  image_util.py  main.py  migrate_preferences.py  migrate_rss_feeds.py  news_viewer.py  newsy.py  pdf_processor.py  process_articles.py  requirements.txt  rss_config.py  rss_downloader.py  rss_server.py  run_news_pipeline.py  sample_entries.json  server.py  summarize.py  test_rss_feed.py  tool_handler.py  tools.py  tts.py  user_preferences.txt  utils.py  vector_store.py
